<resources>
    <string name="app_name">FII Materials</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_year">First Year</string>
    <string name="semester_title">Semester Title</string>
    <string name="class_title">Class Title</string>
    <string name="credits">Credits</string>
    <string name="section_title">Section Title</string>
    <string name="second_year">Second Year</string>
    <string name="first_semester">First Semester</string>
    <string name="second_semester">Second Semester</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>

    <!--    Rate Me Text-->
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you like it I would appreciate if you rate this app, if not, I\'ll be back. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>

    <!--    Navigation Bar-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="tips">Tips</string>
    <!--    <string name="credits">Credits</string>-->
    <string name="faq">FAQ</string>
    <string name="what_tf_is_this">What tf is this?</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="external">External</string>
    <string name="fiimaterials_web">FII Materials Website</string>
    <string name="how_to_use">How to use</string>
    <string name="contact_feedback"><![CDATA[Contact & Feedback]]></string>
    <string name="fragment_title">Fragment Title</string>
    <string name="instruction_details"><![CDATA[If you got stuck trying to figure out what this app is all about, then this illustration will help you understand how it works.\n \"Art is not what you see\"]]></string>
    <string name="testing_mode">Testing Mode</string>
    <string name="madalina_cusutura">Madalina Cusutura\'s Materials</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="hall_of_fame">Hall Of Fame</string>
    <string name="role">Role</string>
    <string name="message">Message</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_list">Feedback List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_rooms">Free Rooms</string>
</resources>


