<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

<!--        <item android:id="@+id/nav_tips"-->
<!--            android:icon="@drawable/ic_cloud"-->
<!--            android:title="@string/tips"/>-->

        <item android:id="@+id/navFreeRooms"
            android:icon="@drawable/ic_room"
            android:title="@string/free_rooms"/>

        <item android:id="@+id/nav_instructions"
            android:icon="@drawable/ic_phone_android"
            android:title="@string/how_to_use"/>

<!--        <item android:id="@+id/nav_faq"-->
<!--            android:icon="@drawable/ic_cloud"-->
<!--            android:title="@string/faq"/>-->

<!--        <item android:id="@+id/nav_hall_of_fame"-->
<!--            android:icon="@drawable/ic_emoji_events"-->
<!--            android:title="@string/hall_of_fame"/>-->

        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_extension"
            android:title="@string/about"/>

        <item android:id="@+id/nav_contact"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback"/>

    </group>

    <item android:title="@string/external">
        <menu>
<!--            <item android:id="@+id/nav_external_madalina"-->
<!--                android:icon="@drawable/ic_chevron_right"-->
<!--                android:title="@string/madalina_cusutura"/>-->
            <item android:id="@+id/nav_external_web"
                android:icon="@drawable/ic_chevron_right"
                android:title="@string/fiimaterials_web"/>
        </menu>
    </item>

</menu>