<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/itemCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="12dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/cardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/classTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/class_title"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/classCredits"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/classCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginBottom="8dp"
                android:text="@string/credits"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/classTitle" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:visibility="gone"

                app:icon="@drawable/ic_favorite_border_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sectionTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:textSize="24sp"
        android:text="@string/section_title"
        android:gravity="center"
        android:visibility="gone"
        android:translationZ="4dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

